--- a/src/components/Setting/SettingProper/EditProfile/EditProfile.module.css
+++ b/src/components/Setting/SettingProper/EditProfile/EditProfile.module.css
@@ -1,4 +1,4 @@
-.editProfile-container {
+.editProfile__container {
     margin-top: 5px;
     padding-top: 34px;
     padding-bottom: 58px;
@@ -12,37 +12,37 @@
     flex-direction: column;
 }
 
-.editprifile-navigation {
+.editprifile__navigation {
     display: flex;
     align-items: center;
     gap: 12px;
     margin-bottom: 40px;
 }
 
-.editprifile-navigation h3 {
+.editprifile__navigation h3 {
     font-size: 21px;
     font-weight: 800;
 }
 
-.editprifile-navigation img {
+.editprifile__navigation img {
     height: 24px;
     width: 24px;
 }
 
-.user-action {
+.user__action {
     display: flex;
     align-items: center;
     gap: 16px;
     margin-bottom: 60px;
 }
 
-.editProfile-img {
+.editProfile__img {
     margin-right: 25px;
     height: 80px;
     width: 80px;
 }
 
-.editProfile-input {
+.editProfile__input {
     padding: 16px;
     border-radius: 8px;
     color: #fff;
@@ -53,22 +53,6 @@
     background-color: #474d57;
     margin-top: 8px;
     margin-bottom: 24px;
-}
-
-.editProfile-upload-btn, .editProfile-reset-btn {
-    box-sizing: border-box;
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    padding: 10px 14px;
-    border-radius: 8px;
-    font-size: 14px;
-    font-weight: bold;
-    width: 155px;
-}
-
-.editProfile-reset-btn {
-    background-color: #474d57;
 }
 
 input::placeholder {
