--- a/src/components/UI/Button/Button.css
+++ b/src/components/UI/Button/Button.css
@@ -173,6 +173,19 @@ button:focus {
   box-shadow: 0 4px 8px 0 rgba(31, 118, 204, 0.4);
 }
 
+.ad-btn {
+  padding: 12px 16px;
+  border-radius: 8px;
+  color: #2793FF;
+  font-size: 12px;
+  font-weight: 800;
+  background-color: #ffffff;
+  border: none;
+  outline: none;
+  box-shadow: 2px 4px rgba(31, 118, 204, 0.2);
+  cursor: pointer;
+}
+
 @media screen and (max-width: 1024px) {
   .withdraw-btn,
   .deposit-btn {
