--- a/src/components/UI/Navbar/Navbar.module.css
+++ b/src/components/UI/Navbar/Navbar.module.css
@@ -1,4 +1,4 @@
-.nav-container {
+.nav__container {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -9,7 +9,7 @@
     box-shadow: 0 6px 25px -2px rgba(0, 0, 0, 0.4);
 }
 
-.nav-search {
+.nav__search {
     display: flex;
     align-items: center;
     gap: 8px;
@@ -20,13 +20,13 @@
     background-color: #35373E;
 }
 
-.nav-search img {
+.nav__search img {
     height: 19px;
     width: 19px;
     color: #fff;
 }
 
-.nav-input {
+.nav__input {
     width: 100%;
     border: none;
     padding: .3rem;
@@ -37,11 +37,11 @@
     outline: none;
 }
 
-.nav-input::placeholder {
+.nav__input::placeholder {
     color: #fff;
 }
 
-.nav-items {
+.nav__items {
     display: flex;
     align-items: center;
 }
@@ -143,7 +143,7 @@
     margin-right: 4px;
 }
 
-.profile-detail {
+.profile__detaill {
     line-height: .1;
 }
 
@@ -152,18 +152,18 @@
     font-weight: 700;
 }
 
-.user-mail {
+.user__mail {
     font-size: 12px;
     font-weight: 400;
     opacity: .6;
 }
 
 @media screen and (max-width: 1024px) {
-    .nav-search {
+    .nav__search {
         width: 217px;
     }
 
-    .nav-input::placeholder {
+    .nav__input::placeholder {
         font-size: 14px;
         font-weight: 400;
     }
